Add some basic game logic and thermometer + date rendering

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 <script src="src/gjs/platformingphysics.js"></script>
 <script src="src/gjs/unlocker.js"></script>
 <script src="src/gjs/renderableobject.js"></script>
+
+<script src="src/gameobject.js"></script>
+<script src="src/party.js"></script>
+<script src="src/conditions.js"></script>
+<script src="src/screen_conditions.js"></script>
 <script src="src/game.js"></script>
 </head>
 
